# dictv

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  FIXES.md  README.md  description.md  raycast-integration.sh
.claude/: settings.local.json
benches/: search.rs
raycast-extension/: .gitignore  README.md  SETUP.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-extension/src/: history.tsx  search.tsx
raycast-extension/src/components/: SearchHistoryItem.tsx  SearchResultItem.tsx
raycast-extension/src/hooks/: useSearch.ts  useSearchHistory.ts
raycast-extension/src/types/: types.ts
raycast-extension/src/utils/: definitionParser.ts
src/: index.rs  lib.rs  main.rs  models.rs  parser.rs  search.rs  server.rs
tests/: cli_tests.rs  fuzzy_search.rs  integration.rs  server_tests.rs
