[package]
name = "dictv"
version = "0.1.0"
edition = "2024"

[dependencies]
# Full-text search engine
tantivy = "0.22"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression
flate2 = "1"

# CLI parser
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for downloading dictionaries
reqwest = { version = "0.12", features = ["blocking", "stream"] }

# String distance for fuzzy matching
strsim = "0.11"

# Directory utilities
dirs = "5"

# Regex for prefix search
regex = "1"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Async testing
tokio-test = "0.4"

# HTTP client for integration tests
reqwest = { version = "0.12", features = ["json"] }

# Test utilities
tempfile = "3"

[[bench]]
name = "search"
harness = false
